# Handy_master

./: README.md
handy_master/Handy/: BackgroundRemover.cpp  BackgroundRemover.h  CMakeLists.txt  FaceDetector.cpp  FaceDetector.h  FingerCount.cpp  FingerCount.h  SkinDetector.cpp  SkinDetector.h  Tracker.h  main.cpp  shape.h
